--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,58 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.App {
+  min-height: 100vh;
+  padding: 10px;
+  background-color: rgb(240, 240, 240);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.icon {
+  border-radius: 50%;
+  background-color: rgb(66, 192, 34);
+  color: white;
+  padding: 5px;
+  margin-left: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.App__container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  margin-top: 10px;
 }
 
-.card {
-  padding: 2em;
+.App__title {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  border-left: 5px solid rgb(252, 191, 54);
+  margin: 25px 0;
 }
 
-.read-the-docs {
-  color: #888;
+.App__isFavorite {
+  margin-bottom: 50px;
+}
+
+.App__desc span {
+  font-weight: 200;
+  font-size: 0.8rem;
+  color: rgb(174, 174, 174);
+}
+
+.App__desc h2 {
+  font-size: 1.3rem;
+}
+
+.btn {
+  padding: 10px 15px;
+  border: none;
+  background: rgb(0, 174, 239);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
 }
