--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,5 +1,5 @@
 .card {
-    width: 250px;
+    width: 200px;
     overflow: hidden;
     border-radius: 10px;
     box-shadow: 5px 5px 5px 0px #00000010;
@@ -9,12 +9,12 @@
 }
 
 .card__img {
-    height: 125px;
+    height: 100px;
 }
 
 .card__img img {
     width: 100%;
-    height: 125px;
+    height: 100px;
     object-fit: cover;
 }
 
@@ -70,6 +70,8 @@
 
 .card__country img {
     width: 25px;
+    height: 25px;
+    object-fit: cover;
     border-radius: 50%;
     margin: 0 10px 5px;
 }
